@@ -1,6 +1,7 @@
 2011-02-09  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Fixed bug #1897: Bad phpdoc causes parsing error if function parameter is commented
+	* Fixed bug #1895: ExtDevEval inserts linebreaks at ternary conditional operator expressions in "PHP source code tuning"
 
 2011-02-08  Oliver Hader  <oliver.hader@typo3.org>
 
